welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var one:Int
      ^array123:3: error: local variables must be initialized
  var one:Int
      ^array123:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var two:Int
      ^array123:4: error: local variables must be initialized
  var two:Int
      ^array123:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var three:Int
      ^array123:5: error: local variables must be initialized
  var three:Int
      ^array123:8: error: type mismatch;
 found   : Unit
 required: Boolean
  for (n <- nums){
         ^