welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  
  var one:Int
  var two:Int
  var three:Int
  
  
  for (n <- nums){
    
  }
  
}